web/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: web
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt
    certmanager.k8s.io/acme-challenge-type: dns01
    certmanager.k8s.io/acme-dns01-provider: cloudflare-dns
spec:
  tls:
    - secretName: deuill-org-certificate
      hosts:
        - deuill.org
  rules:
    - host: deuill.org
      http:
        paths:
          - path: /
            backend:
              serviceName: deuill-org
              servicePort: 80
